# agro-monitoring-platform

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  nginx.prod.conf
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  README_SETUP.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_setup.py  002_add_user_flags.py  003_add_dev_eui_to_sensors.py  004_add_system_roles.py  005_increase_soil_readings_precision.py
backend/app/: __init__.py  cli.py  config.py  database.py  main.py
backend/app/core/: __init__.py  deps.py  security.py
backend/app/models/: __init__.py  alert.py  analytics.py  base.py  event.py  farm.py  note.py  organization.py  sensor.py  timeseries.py
backend/app/routers/: admin.py  alerts.py  analytics.py  auth.py  events.py  farms.py  plots.py  roles.py  sensors.py  users.py
backend/app/schemas/: __init__.py  alert.py  analytics.py  auth.py  event.py  farm.py  organization.py  plot.py  sensor.py  sensor_type.py  timeseries.py  user.py
backend/app/services/: __init__.py  organization_service.py  sensor_type_service.py  user_service.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AlertsList.tsx  MetricChart.tsx  OrganizationSelector.tsx  PlotCard.tsx  PlotDrawer.tsx  SensorHealthList.tsx
frontend/src/config/: env.ts
frontend/src/contexts/: AuthContext.tsx  FarmContext.tsx  GlobalFilterContext.tsx  OrganizationContext.tsx
mqtt-bridge/: .env  Dockerfile  docker-compose.yml  main.py  requirements.txt
(+76 files in other folders)
